--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
+	"lint-staged": {
+		"*.ts": "eslint --fix",
+		"*.svelte": "eslint --fix",
+		"*.scss": "prettier --write"
+	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
