--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test2": "echo \"Tests have started\"",
-		"test": "vitest",
+		"test": "vitest run",
 		"test:watch": "vitest --watch",
 		"test:coverage": "vitest --coverage"
 	},
