--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"test2": "echo \"Tests have started\"",
 		"test": "vitest run",
-		"test:watch": "vitest --watch",
-		"test:coverage": "vitest --coverage"
+		"test:watch": "vitest --watch"
 	},
 	"lint-staged": {
 		"*.{ts,svelte,scss}": "prettier --write"
